challenge10/webdb.yaml
apiVersion: v1
kind: Service
metadata:

  name: webdb
  namespace: fdiouf
spec:
  selector:
    app: webdb
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000  # Port sur lequel l'application écoute
