challenge10/webnodb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webnodb
  namespace: fdiouf
spec:
  selector:
    app: webnodb
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000  # Port sur lequel l'application écoute
