challenge10/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-ingress
  namespace: fdiouf
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: webnodb.fdiouf.net4255.luxbulb.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: webnodb
                port:
                  number: 80
    - host: webdb.fdiouf.net4255.luxbulb.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: webdb
                port:
                  number: 80
